Fixed header on small screens

--- a/app/detective/static/detective/css/header.less
+++ b/app/detective/static/detective/css/header.less
@@ -61,7 +61,7 @@ header {
         right:200px;
 
         .twitter-typeahead, .input-control {
-            width:500px;
+            width:50%;
             height: @header-height - 19px;
             padding-top:0;
         }
